--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 				 Bill Clinton
 				</button>
 
-				<button president="Geoge H.W. Bush">
-				Geoge H.W. Bush
+				<button president="George H.W. Bush">
+				George H.W. Bush
 				 </button>
 				 <!-- **************************************** -->
 
